# claw-code

rust/: .gitignore  Cargo.toml  Cargo.toml.backup  Cargo.toml.backup2  claw_ollama.sh  claw_pro.sh  smart_claw.sh  start-claw.sh  test_claw.sh  test_multi_provider.rs
rust/.claw-framework/: INSTRUCTIONS.md  MANIFEST.md  PROMPT.md
rust/claw_standalone/: Cargo.toml
rust/claw_standalone/src/: main.rs
rust/crates/gui/: Cargo.toml
rust/crates/gui/src/: main.rs  ollama.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bmad_bridge.rs  bridge.rs  lib.rs  multi_lang.rs  team_coordinator.rs
rust/crates/runtime/src/providers/: anthropic.rs  deepseek.rs  mod.rs  ollama.rs
rust/crates/runtime/src/script_framework/: mod.rs  mod.rs.backup
rust/crates/web-ui/: package.json  vite.config.ts
rust/crates/web-ui/src/: App.tsx
rust/crates/web-ui/src/components/: ChatInterface.tsx  FormattedResponse.tsx
rust/crates/web-ui/src/pages/: Chat.tsx  Dashboard.tsx  Projects.tsx  Settings.tsx
rust/crates/web-ui/src/services/: api.ts
rust/crates/web-ui/src/types/: index.ts
rust/scripts/: build_release.sh
