[workspace]
members = [
    "claw_standalone",
    "crates/api",
    "crates/commands", 
    "crates/compat-harness",
    "crates/mock-anthropic-service",
    "crates/plugins",
    "crates/runtime",
    "crates/rusty-claude-cli",
    "crates/telemetry",
    "crates/tools",
    "crates/gui"  # Ajoutez cette ligne
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
serde_json = "1"
crossterm = "0.29.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"