[package]
name = "gui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Dépendances web
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["fs"] }

# Dépendances workspace
anyhow.workspace = true
serde_json.workspace = true

# Dépendances spécifiques
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }  # Pour les appels HTTP
