[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"
# Nouvelles dépendances pour multi-provider
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
anyhow = { workspace = true }
url = "2.5"
yaml-rust2 = "0.11.0"

[lints]
workspace = true
